--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head></head>
-  <body>
+  <body class="styles.css">
     <h1>Hi, welcome.</h1>
     <p>asdfasdfasdfasdfasdfasdf</p>
     <a href="https://github.com/hdoan002">Github</a>
