--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><link href="style.css" type="text/css" rel="stylesheet"></head>
+  <head><link href="styles.css" type="text/css" rel="stylesheet"></head>
   <body class="styles.css">
     <h1>Hi, welcome.</h1>
     <p>asdfasdfasdfasdfasdfasdf</p>
