--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head><link href="styles.css" type="text/css" rel="stylesheet"></head>
-  <body class="styles.css">
+  <body>
+    <div class="styles.css">
     <h1>Hi, welcome.</h1>
     <p>asdfasdfasdfasdfasdfasdf</p>
     <a href="https://github.com/hdoan002">Github</a>
+    </div>
   </body>
 </html>
