--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head><link href="styles.css" type="text/css" rel="stylesheet"></head>
   <body>
-    <div class="styles.css">
+    <div class="container">
     <h1>Hi, welcome.</h1>
     <p>asdfasdfasdfasdfasdfasdf</p>
     <a href="https://github.com/hdoan002">Github</a>
