changing some content

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head><link href="styles.css" type="text/css" rel="stylesheet"></head>
   <body>
     <div class="container">
-    <h1>Hi, welcome.</h1>
-    <p>asdfasdfasdfasdfasdfasdf</p>
-    <a href="https://github.com/hdoan002">Github</a>
+    <h1>Hello, my name is Henry Doan.</h1>
+    <p>Welcome to my website!</p>
+    <a href="https://github.com/hdoan002">My Github</a>
     </div>
   </body>
 </html>
