--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head><link href="styles.css" type="text/css" rel="stylesheet"></head>
   <body>
     <div class="container">
-    <h1>Hello, my name is Henry Doan.</h1>
-    <p>Welcome to my website!</p>
+    <h2>Hello, my name is Henry Doan.</h2>
+    <h1>Welcome to my website!</h1>
     <a href="https://github.com/hdoan002">My Github</a>
     </div>
   </body>
