adding more content to the website

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head><link href="styles.css" type="text/css" rel="stylesheet"></head>
   <body>
     <div class="container">
-    <h1>Hello, my name is Henry Doan.</h1>
-    <h2>Welcome to my website!</h2>
-    <a href="https://github.com/hdoan002">My Github</a>
+      <h1>Hello, my name is Henry Doan.</h1>
+      <h2>Welcome to my website!</h2>
+    </div>
+    <div >
+      <h2>About me</h2>
+      <p>I am studying to be a computer scientist at the University of California, Riverside.</p>
+    </div>
+    <div>
+      <h2>Contact me!</h2>
+      <a href="https://hdoan002.github.com">My Github</a>
     </div>
   </body>
 </html>
