--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
       <h2>Welcome to my website!</h2>
     </div>
     <div >
-      <h2>About me</h2>
+      <h2>About me:</h2>
       <p>I am studying to be a computer scientist at the University of California, Riverside.</p>
     </div>
     <div>
-      <h2>Contact me!</h2>
+      <h2>Contact me:</h2>
       <a href="https://hdoan002.github.com">My Github</a>
+      <a href="https://www.facebook.com/henry.doan.12">Facebook</a>
+      <a href="https://www.instagram.com/harrychoow/">Instagram</a>
+      <a>Email: hdoan002@ucr.edu</a>
     </div>
   </body>
 </html>
