--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
     </div>
     <div>
       <h2>Contact me:</h2>
-      <a href="https://hdoan002.github.com">My Github</a>
-      <a href="https://www.facebook.com/henry.doan.12">Facebook</a>
-      <a href="https://www.instagram.com/harrychoow/">Instagram</a>
+      <span>
+	<a href="https://hdoan002.github.com">My Github</a>
+      </span>
+      <br>
+      <span>
+	<a href="https://www.facebook.com/henry.doan.12">Facebook</a>
+      </span>
+      <br>
+      <span>
+	<a href="https://www.instagram.com/harrychoow/">Instagram</a>
+      </span>
+      <br>
       <a>Email: hdoan002@ucr.edu</a>
     </div>
   </body>
