--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
       <h1>Hello, my name is Henry Doan.</h1>
       <h2>Welcome to my website!</h2>
     </div>
+
+    <!--ABOUT ME-->
     <div >
       <h2>About me:</h2>
       <p>I am studying to be a computer scientist at the University of California, Riverside.</p>
     </div>
+    <!--CONTACT ME-->
     <div>
       <h2>Contact me:</h2>
       <span>
-	<a href="https://hdoan002.github.com">My Github</a>
+	<a href="https://hdoan002.github.com"><b>My Github</b></a>
       </span>
       <br>
       <span>
-	<a href="https://www.facebook.com/henry.doan.12">Facebook</a>
+	<a href="https://www.facebook.com/henry.doan.12"><b>Facebook</b></a>
       </span>
       <br>
       <span>
-	<a href="https://www.instagram.com/harrychoow/">Instagram</a>
+	<a href="https://www.instagram.com/harrychoow/"><b>Instagram</b></a>
       </span>
       <br>
-      <a>Email: hdoan002@ucr.edu</a>
+      <a><b>Email:</b> hdoan002@ucr.edu</a>
     </div>
   </body>
 </html>
