--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>About me:</h2>
       <p>I am studying to be a computer scientist at the University of California, Riverside.</p>
       <h3>Resume:</h3>
-      <a href="https://hdoan002.github.io/Henry_Doan_Resume">Resume</a>
+      <a href="https://hdoan002.github.io/Henry_Doan_Resume.pdf">Resume</a>
     </div>
     <!--CONTACT ME-->
     <div>
