--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     <div >
       <h2>About me:</h2>
       <p>I am studying to be a computer scientist at the University of California, Riverside.</p>
-      <h3>Resume:</h3>
+      <h4>Resume:</h4>
       <a href="https://hdoan002.github.io/Henry_Doan_Resume.pdf">Resume</a>
+    </div>
+
+    <!--PICTURES-->
+    <div>
+      <h2>Pictures</h2>
+      <h5>Citrus Hack</h5>
+      <img src="Pictures/C_hack.jpg" alt="Citrus Hack">
     </div>
     <!--CONTACT ME-->
     <div>
