--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div>
       <h2>Pictures</h2>
       <h5>Citrus Hack</h5>
-      <img src="Pictures/C_hack.jpg" alt="Citrus Hack">
+      <img src="Picture/C_hack.jpg" alt="Citrus Hack">
     </div>
     <!--CONTACT ME-->
     <div>
