adding more background to about me

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><link href="styles.css" type="text/css" rel="stylesheet"></head>
+  <head><link href="styles.css" type="text/css" rel="stylesheet"></head>o
   <body>
     <div class="container">
       <h1>Hello, my name is Henry Doan.</h1>
@@ -10,7 +10,7 @@
     <!--ABOUT ME-->
     <div >
       <h2>About me:</h2>
-      <p>I am studying to be a computer scientist at the University of California, Riverside.</p>
+      <p>I am studying to be a computer scientist at the University of California, Riverside and am heavily invovled in our ACM charter. ACM stands for the Association for Computing Machinery which is a professional student organization geared towards supporting our Computer Science and Engineering students. I am the Professional Development Chair for our club which is responsible for interacting with companies and fostering a professional relationship. It is my responsibility to reach out to companies in which our members are interested in and to collaborate with them to develop more opportunities for our engineering community. I enjoy this position because it allows me to contribute to the CS/CE community at UCR and also because I believe that the true meaning of success is not the gaining of material possessions. Instead, I believe that the definition of success is the ability to encourage and contribute to the success of those that you care. It is due to the same passion for Computer Science that I get a kick out of serving and supporting my fellow students and club members. My only goal is to be able to say that I have made a difference within my community during my time as Professional Development Chair.</p>
       <h4>Resume:</h4>
       <a href="https://hdoan002.github.io/Henry_Doan_Resume.pdf">Resume</a>
     </div>
@@ -19,7 +19,7 @@
     <div>
       <h2>Pictures</h2>
       <h5>Citrus Hack</h5>
-      <img src="Picture/C_hack.jpg" alt="Citrus Hack" style="width:304;height:250px;">
+      <img src="pictures/C_hack.jpg" alt="Citrus Hack" style="width:304;height:250px;">
     </div>
     <!--CONTACT ME-->
     <div>
