fixed typo at beginning

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><link href="styles.css" type="text/css" rel="stylesheet"></head>o
+  <head><link href="styles.css" type="text/css" rel="stylesheet"></head>
   <body>
     <div class="container">
       <h1>Hello, my name is Henry Doan.</h1>
