--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="style.css" type="text/css" rel="stylesheet">
-    <title>SB Hack 2016</title>      
+    <title>Henry's Projects</title>      
   </head>
   <body>
     
