starting project file

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <title>Henry's Projects</title>      
   </head>
   <body>
-    
+    <h1>Here are some of the projects that I have worked on:</h1>
+        
   </body>
 </html>
