--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--ABOUT ME-->
     <div class="container">
       <h2>About me:</h2>
-      <p>I am studying to be a computer scientist at the University of California, Riverside and am heavily involved in our ACM charter. ACM stands for the Association for Computing Machinery which is a professional student organization geared towards supporting our Computer Science and Engineering students. I am the ACM Professional Development Chair, who is responsible for interacting and fostering professional relationships with companies. It is my responsibility to contact companies and collaborate with them to develop more opportunities for our engineering community at UCR. I enjoy this position because it allows me to contribute UCR's professional presence. I believe that the true meaning of success is not the gaining of material possessions but rather, it is the ability to encourage and add to the success of those you care about. I appreciate the opportunity to  support and serve my fellow students and members because of my passion for Computer Science. My only goal is to be able to say that I have made a difference within my community during my time as the Professional Development Chair.</p>
+      <p style="font-size:18px;">I am studying to be a computer scientist at the University of California, Riverside and am heavily involved in our ACM charter. ACM stands for the Association for Computing Machinery which is a professional student organization geared towards supporting our Computer Science and Engineering students. I am the ACM Professional Development Chair, who is responsible for interacting and fostering professional relationships with companies. It is my responsibility to contact companies and collaborate with them to develop more opportunities for our engineering community at UCR. I enjoy this position because it allows me to contribute UCR's professional presence. I believe that the true meaning of success is not the gaining of material possessions but rather, it is the ability to encourage and add to the success of those you care about. I appreciate the opportunity to  support and serve my fellow students and members because of my passion for Computer Science. My only goal is to be able to say that I have made a difference within my community during my time as the Professional Development Chair.</p>
       <div class="container_resume">
 	<h3>Resume:</h3>
 	<a href="https://hdoan002.github.io/resume/Henry_Doan_Resume.pdf">Henry_Doan_Resume.pdf</a>
@@ -24,18 +24,26 @@
 	  <h2>Projects</h2>
 	</a>
 	<figure>
-	  <a href="https://hdoan002.github.io/projects/CitrusHack2015.html">
-	    <img src="pictures/C_Hacks.jpg" alt="Citrus Hacks" class="pic">
-	  </a>
+	  <img src="pictures/C_Hacks.jpg" alt="Citrus Hacks" class="pic">
 	  <figcaption>Citrus Hack 2015</figcaption>
 	</figure>
       </div>
       <div class="picture_div">
 	<figure>
-	  <a href="https://hdoan002.github.io/projects/SBHack2016.html">
-	    <img src="pictures/SB_Hacks_2016.jpg" alt="SB Hacks" class="pic">
-	  </a>
+	  <img src="pictures/SB_Hacks_2016.jpg" alt="SB Hacks" class="pic">
 	  <figcaption>SB Hack 2016</figcaption>
+	</figure>
+      </div>
+      <div class="picture_div">
+	<figure>
+	  <img src="pictures/RSA_2016.jpg" alt="RSA" class="pic">
+	  <figcaption>RSA</figcaption>
+	</figure>
+      </div>
+      <div class="picture_div">
+	<figure>
+	  <img src="pictures/bash_scripts.jpg" alt="Bash Scripts" class="pic">
+	  <figcaption>Bash Script Collection</figcaption>
 	</figure>
       </div>
     </div>
@@ -56,7 +64,7 @@
 	  <a href="https://www.instagram.com/harrychoow/"><b>Instagram</b></a>
 	</span>
 	<br>
-	<a><b>Email:</b> hdoan002@ucr.edu</a>
+	<a><b>Email:</b> hdoan657@gmail.com</a>
       </div>
     </div>
   </body>
