added calendar and completed project page

--- a/projects.html
+++ b/projects.html
@@ -11,26 +11,26 @@
     <div class="banner">
       <h1>Here are some of the projects that I have worked on:</h1>
     </div>
-    
+
     <!--PROJECT1-->
     <ol>
       <div class="project_div">
 	<li>
-	  <h3>Mailbox Notifier</h3>
+	  <h3>Mailbox Notifier | Citrus Hack 2015</h3>
 	  <a href="https://github.com/jgome043/mailbox-notifier">
 	    <img src="pictures/C_Hacks.jpg" class="project_pic" >
 	  </a>
 	  <div class="project_content_div">
 	      <ul>
-		<li>Users are able to have packages and mail inserted into the mailbox and were prompted with a notification through a webpage.</li>
+		<li>Users are able to have packages and mail inserted into their mailbox and are prompted with a notification through a webpage.</li>
 		<br>
 		<li>I was responsible for designing the inital project concept and developing the hardware design.</li>
 		<br>
-		<li>I also assisted my team members implementing the hardware, develop the nofication webpage and the logging of the notifications.</li>
+		<li>I also assisted my team members in implementing the hardware, developing the nofication webpage and the logging of the notifications.</li>
 		<br>
-		<li>Each log contained a time stamp of when the mail arrived and was removed.</li>
+		<li>Each log contained a time stamp of when the mail arrived and it was removed.</li>
 		<br>
-		<li>We used an Arduino to tie all of the different components together and I helped with the testing of the Ardiuno code.</li>
+		<li>We used an Arduino Uno to tie all of the different components together and I helped with the testing of the Ardiuno code.</li>
 	      </ul>
 	    </div>
 	</li>
@@ -38,7 +38,7 @@
       <!--PROJECT2-->
       <div class="project_div">
 	   <li>
-	     <h3>Class Insights</h3>
+	     <h3>Class Insights | SB Hacks 2016</h3>
 	     <a href="https://github.com/hdoan002/SB-Hacks-2016">
 	       <img src="pictures/SB_Hacks_2016.jpg" class="project_pic">
 	     </a>
@@ -62,21 +62,23 @@
       <!--PROJECT3-->
       <div class="project_div">
 	   <li>
-	     <h3>RSA</h3>
+	     <h3>RSA | LA Hacks 2016</h3>
 	     <a href="https://github.com/hdoan002/RSA-2016">
 	       <img src="pictures/RSA_2016.jpg" class="project_pic">
 	     </a>
 	     <div class="project_content_div">
 	       <ul>
-		 <li></li>
+		 <li>After taking my discrete structure course, I became interested in the RSA algorithm.</li>
 		 <br>
-		 <li></li>
+		 <li>I attempted to implement my own version of the RSA aglorithm as a hash function.</li>
 		 <br>
-		 <li></li>
+		 <li>Using the hash function, I attempted to implement a hash table.</li>
 		 <br>
-		 <li></li>
+		 <li>It was designed to be used for password encryption and decryption on other projects.</li>
 		 <br>
-		 <li></li>
+		 <li>The final project could not be complete due to the constraints on memory required to correctly run the algorithm at the time.</li>
+		 <br>
+		 <li>Overall, I enjoyed working this project because it gave me a opportunity to try to utilize some of the materials that I learned in class.</li>
 	       </ul>
 	       </div>
 	   </li>
@@ -84,7 +86,7 @@
       <!--PROJECT4-->
       <div class="project_div">
 	   <li>
-	     <h3>Bash Script Collection</h3>
+	     <h3>Bash Script Collection | Fall 2016</h3>
 	     <a href="https://github.com/hdoan002/bash_scripts">
 	       <img src="pictures/bash_scripts.jpg" class="project_pic">
 	     </a>
