changing schedule label

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="container">
-      <h2>School Schedule</h2>
+      <h2>My Schedule</h2>
       <iframe src="https://calendar.google.com/calendar/embed?title=School%20schedule&amp;height=600&amp;wkst=1&amp;bgcolor=%23cccccc&amp;ctz=America%2FLos_Angeles" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
     <!--CONTACT ME-->
