fixed the calendar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head><link href="styles.css" type="text/css" rel="stylesheet"><title>Henry Doan's Website</title></head>
+  <head>
+    <link href="styles.css" type="text/css" rel="stylesheet">
+    <link rel="shortcut icon" href="pictures/C_Hacks.jpg">
+    <title>Henry Doan's Website</title>
+  </head>
   <body background="pictures/backgrounds/background5.jpg" class="page_background">
     <div class="container">
       <h1>Hello, my name is Henry Doan.</h1>
@@ -49,7 +53,7 @@
     </div>
     <div class="container">
       <h2>My Schedule</h2>
-      <iframe src="https://calendar.google.com/calendar/embed?title=School%20schedule&amp;height=600&amp;wkst=1&amp;bgcolor=%23cccccc&amp;ctz=America%2FLos_Angeles" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      <iframe src="https://calendar.google.com/calendar/embed?title=My%20Calendar&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23cccccc&amp;src=hdoan002%40ucr.edu&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
     <!--CONTACT ME-->
     <div class="contact_me_div">
