--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
     <link href="styles.css" type="text/css" rel="stylesheet">
     <link rel="shortcut icon" href="pictures/C_Hacks.jpg">
     <title>Henry Doan's Website</title>
@@ -13,17 +14,29 @@
 
     <!--ABOUT ME-->
     <div class="container">
+      <!--ABOUT_ICON-->
+      <div class="i_div">
+	<i class="fa fa-user fa-2x" aria-hidden="true"></i>
+      </div>
       <h2>About me:</h2>
       <p style="font-size:18px; line-height:150%;">I am studying to be a computer scientist at the University of California, Riverside and am heavily involved in our ACM charter. ACM stands for the Association for Computing Machinery which is a professional student organization geared towards supporting our Computer Science and Engineering students. I am the ACM Professional Development Chair, who is responsible for interacting and fostering professional relationships with companies. It is my responsibility to contact companies and collaborate with them to develop more opportunities for our engineering community at UCR. I enjoy this position because it allows me to contribute UCR's professional presence. I believe that the true meaning of success is not the gaining of material possessions but rather, it is the ability to encourage and add to the success of those you care about. I appreciate the opportunity to  support and serve my fellow students and members because of my passion for Computer Science. My only goal is to be able to say that I have made a difference within my community during my time as the Professional Development Chair.</p>
       <div class="container_resume">
+	<!--RESUME_ICON-->
+	<div class="i_div">
+	  <i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i>
+	</div>
 	<h3>Resume:</h3>
-	<a href="https://hdoan002.github.io/resume/Henry_Doan_Resume.pdf">Henry_Doan_Resume.pdf</a>
+	<a href="https://hdoan002.github.io/resume/Henry_Doan_Resume.pdf">My Resume</a>
       </div>
     </div>
 
     <!--PROJECTS-->
     <div class="container"> 
       <div class="picture_div">
+      <!--TERMINAL_ICON-->
+      <div class="i_div">
+	<i class="fa fa-terminal fa-2x" aria-hidden="true"></i>
+      </div>
 	<a href="https://hdoan002.github.io/projects.html">
 	  <h2>Projects</h2>
 	</a>
@@ -52,27 +65,58 @@
       </div>
     </div>
     <div class="container">
+      <!--CALENDAR_ICON-->
+      <div class="i_div">
+	<i class="fa fa-calendar fa-2x" aria-hidden="true"></i>
+      </div>
       <h2>My Schedule</h2>
+      <br>
+      <br>
       <iframe src="https://calendar.google.com/calendar/embed?title=My%20Calendar&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23cccccc&amp;src=hdoan002%40ucr.edu&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
     <!--CONTACT ME-->
     <div class="contact_me_div">
+    <!--ADDRESS_ICON-->
+      <div class="i_div">
+	<i class="fa fa-address-book fa-2x" aria-hidden="true"></i>
+      </div>
       <h2>Contact me:</h2>
       <div class="contact">
+	<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	<span>
 	  <a href="https://hdoan002.github.com"><b>My Github</b></a>
 	</span>
 	<br>
+	<i class="fa fa-facebook-official" aria-hidden="true"></i>
 	<span>
 	  <a href="https://www.facebook.com/henry.doan.12"><b>Facebook</b></a>
 	</span>
 	<br>
+	<i class="fa fa-instagram" aria-hidden="true"></i>
 	<span>
 	  <a href="https://www.instagram.com/harrychoow/"><b>Instagram</b></a>
 	</span>
 	<br>
+	<i class="fa fa-envelope" aria-hidden="true"></i>
 	<a><b>Email:</b> hdoan657@gmail.com</a>
+	<br>
+	<i class="fa fa-phone" aria-hidden="true"></i>
+	<a><b>Phone Number: </b> (669)237-9628</a>
       </div>
     </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
