--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="styles.css" type="text/css" rel="stylesheet">
-    <link href="https://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
+    <link href="//fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
     <title>Henry's Projects</title>      
   </head>
   
