--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="styles.css" type="text/css" rel="stylesheet">
-    <link href="//fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">	
     <title>Henry's Projects</title>      
   </head>
   
