Fixing contact footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body style="-webkit-font-smoothing: antialiased !important;">
 
     <!--HEADER MENU-->
-    <div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:#FFFFF"> 
+    <div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:white";> 
       <div class="active item">
 	Henry Doan
       </div>
