--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <link href="styles.css" type="text/css" rel="stylesheet">
     <link rel="shortcut icon" href="pictures/C_Hacks.jpg">
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
     <script
@@ -16,7 +15,7 @@
   <body style="-webkit-font-smoothing: antialiased !important;">
 
     <!--HEADER MENU-->
-    <div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:#FFFFF"> 
+    <div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:white"> 
       <div class="active item">
 	Henry Doan
       </div>
