--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="pictures/C_Hacks.jpg">
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
     <script
