--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
   <body style="-webkit-font-smoothing: antialiased !important;">
 
     <!--HEADER MENU-->
-    <div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:white"> 
+    <div class="ui fixed inverted menu" style="background-color:#2D2D2D; color:white;"> 
       <div class="active item">
 	Henry Doan
       </div>
@@ -34,35 +34,35 @@
       </a>
     </div>
 
-    <div class="ui grid">    
+		<div class="ui grid container">    
       <!--PROJECT1-->
-      <div class="column row">
-	<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
-	  <h2>Mailbox Notifier | Citrus Hack 2015</h2>
-	</div>
-	<div class="six wide column" style="padding-left:30px">
-	  <img src="pictures/C_Hacks.jpg" class="ui centered large image">
-	</div>
-	<div class="ten wide column">
-	  <div class="ui bulleted list" style="font-size:13pt">
-	    <div class="item" style="padding:10px;">
-	      Users are able to have packages and mail inserted into their mailbox and are prompted with a notification through a webpage.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      I was responsible for designing the inital project concept and developing the hardware design.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      I also assisted my team members in implementing the hardware, developing the nofication webpage and the logging of the notifications.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      Each log contained a time stamp of when the mail arrived and it was removed.
-	    </div>
-	    <div class="item" style="padding:10px;">
-	      We used an Arduino Uno to tie all of the different components together and I helped with the testing of the Ardiuno code.
-	    </div>
-	  </div>
-	</div>
-      </div>
+			<div class="column row">
+				<div class="ui center aligned sixteen wide column" style="padding-bottom:20px; padding-top:20px;">
+	  		<h2>Mailbox Notifier | Citrus Hack 2015</h2>
+				</div>
+				<div class="six wide column" style="padding-left:30px">
+					<img src="pictures/C_Hacks.jpg" class="ui centered large image">
+				</div>
+				<div class="ten wide column">
+					<div class="ui bulleted list" style="font-size:13pt">
+						<div class="item" style="padding:10px;">
+							Users are able to have packages and mail inserted into their mailbox and are prompted with a notification through a webpage.
+						</div>
+						<div class="item" style="padding:10px;">
+							I was responsible for designing the inital project concept and developing the hardware design.
+						</div>
+						<div class="item" style="padding:10px;">
+							I also assisted my team members in implementing the hardware, developing the nofication webpage and the logging of the notifications.
+						</div>
+						<div class="item" style="padding:10px;">
+							Each log contained a time stamp of when the mail arrived and it was removed.
+						</div>
+						<div class="item" style="padding:10px;">
+							We used an Arduino Uno to tie all of the different components together and I helped with the testing of the Ardiuno code.
+						</div>
+					</div>
+				</div>
+			</div>
 
       <!--PROJECT2-->
       <div class="column row">
